Introduce sequence-from-timestamp and timestamp-from-sequence API
